--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
-      rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="contents/css/global.css">
+    <title>Profile</title>
 </head>
 <body>
-    <i class="material-icons">article</i>
+    
+    <script src="js/events.js"></script>
+    <script src="js/dom.js"></script>
 </body>
 </html>
