--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="contents/css/global.css">
     <title>Profile</title>
 </head>
 <body>
-    
-    <script src="js/events.js"></script>
-    <script src="js/dom.js"></script>
+    <header>
+        <a href="#" class="Logo">logo</a>
+        <nav>
+            <a href="#" class="nav-item">Profil</a>
+            <a href="#" class="nav-item">Portofolio</a>
+        </nav>
+    </header>
+    <main>
+        <button>Button</button>
+    </main>
+    <footer></footer>
 </body>
 </html>
