fix/navbar-header-indicator

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 </head>
 <body>
     <header>
-        <a href="#" class="Logo">logo</a>
         <nav>
-            <a href="#" class="nav-item">Profil</a>
-            <a href="#" class="nav-item">Portofolio</a>
+            <a href="#" class="nav-item active">
+                Profil
+                <span class="indicator"></span>
+            </a>
+            <a href="#" class="nav-item">
+                Portofolio
+                <span class="indicator"></span>
+            </a>
         </nav>
     </header>
     <main>
