feat/add-content

--- a/index.html
+++ b/index.html
@@ -25,8 +25,29 @@
         </nav>
     </header>
     <main>
-        <button>Button</button>
+        <article id="profile">
+            <section id="photo"></section>
+            <section id="about-me">
+                <h4>Dwikie Reza Prananda</h4>
+            </section>
+        </article>
     </main>
-    <footer></footer>
+    <footer>
+        <article id="info">
+            <section id="contact">
+                <h3>Kontak</h3>
+                <ul>
+                    <li>
+                        <i class="material-icons">email</i>
+                        <a href="mailto:neithroid@gmail.com">neithroid@gmail.com</a>
+                    </li>
+                    <li>
+                        <i class="material-icons">phone</i>
+                        +62 857 1768 1025
+                    </li>
+                </ul>
+            </section>
+        </article>
+    </footer>
 </body>
 </html>
