fix/more-about-me

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p style="max-width: 800px; margin: auto; text-align: justify;">
                     Lahir pada 9 September 1998, dengan keseharian tidak jauh dari perangkat elektronik khususnya komputer
                     menjadikan saya sangat berkeinginan untuk mempelajarinya lebih dalam. Saya mengambil jurusan TKJ (Teknik Komputer Jaringan)
-                    di SMK di SMK Negeri 2 Kota Bogor, lalu melanjutkannya kuliah dengan prodi Manajemen Informatika di Bina Sarana Informatika.
+                    di SMK Negeri 2 Kota Bogor, lalu melanjutkannya kuliah dengan prodi Manajemen Informatika di Bina Sarana Informatika.
                 </p>
             </article>
         </div>
