--- a/index.html
+++ b/index.html
@@ -14,64 +14,7 @@
     <title>Profile</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <section class="nav-menu">
-                <a href="#profile" class="nav-item">
-                    Profil
-                    <span class="indicator"></span>
-                </a>
-                <a href="#more-about-me" class="nav-item">
-                    Tentang saya
-                    <span class="indicator"></span>
-                </a>
-            </section>
-        </nav>
-    </header>
-    <main>
-        <div id="content">
-            <article id="profile">
-                <section id="about-me">
-                    <h5 class="text-theme">
-                        Halo, selamat datang!
-                    </h5>
-                    <p>
-                        Nama saya Dwikie Reza Prananda, seorang Antusias Teknologi juga <i>Programmer</i> dari Bogor, Jawa Barat. 
-                        Saya juga menyukai karya tulis seperti novel ringan. ツ
-                    </p>
-                </section>
-                <section id="photo">
-                    <div class="rectangle">
-                    </div>
-                </section>
-            </article>
-            <article id="more-about-me">
-                <h5 class="text-theme text-align-center">Tentang Saya</h5>
-                <p style="max-width: 800px; margin: auto; text-align: justify;">
-                    Lahir pada 9 September 1998, dengan keseharian tidak jauh dari perangkat elektronik khususnya komputer
-                    menjadikan saya sangat berkeinginan untuk mempelajarinya lebih dalam. Saya mengambil jurusan TKJ (Teknik Komputer Jaringan)
-                    di SMK Negeri 2 Kota Bogor, lalu melanjutkannya kuliah dengan prodi Manajemen Informatika di Bina Sarana Informatika.
-                </p>
-            </article>
-        </div>
-    </main>
-    <footer>
-        <article id="info">
-            <section id="contact">
-                <h5>Kontak</h5>
-                <ul>
-                    <li>
-                        <i class="material-icons">email</i>
-                        <a href="mailto:neithroid@gmail.com">neithroid@gmail.com</a>
-                    </li>
-                    <li>
-                        <i class="material-icons">phone</i>
-                        +62 857 1768 1025
-                    </li>
-                </ul>
-            </section>
-        </article>
-    </footer>
+    Homework 2
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
