--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <main>
         <div id="content">
-            <article id="about-me" class="d-flex justify-content-between align-items-center flex-lg-row flex-md-column-reverse flex-column-reverse container py-5">
+            <article id="about-me" style="min-height: 640px;" class="d-flex justify-content-between align-items-center flex-lg-row flex-md-column-reverse flex-column-reverse container py-5">
                 <section id="description">
                     <div id="description-title">
                         <h3>
