fix/bio-responsive-layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </article>
             <article id="bio">
                 <div class="container d-flex flex-column-reverse flex-sm-column-reverse flex-md-column-reverse flex-lg-row justify-content-evenly py-3">
-                    <section id="bio-contact" class="mx-0 mx-md-4 mx-lg-4">
+                    <section id="bio-contact" class="mx-0 mx-md-4 mx-lg-4 col-md-6 px-4">
                         <h6>CONTACT</h6>
                         <ul class="list-unstyled">
                             <li class="mb-1 d-flex align-items-center">
@@ -52,7 +52,7 @@
                             </li>
                         </ul>
                     </section>
-                    <section id="bio-education" class="mx-0 mx-md-4 mx-lg-4">
+                    <section id="bio-education" class="mx-0 mx-md-4 mx-lg-4 col-md-6 px-4">
                         <h6>EDUCATION</h6>
                         <ul class="list-unstyled">
                             <dl>
